--- a/Speech_to_Text_OA.ipynb
+++ b/Speech_to_Text_OA.ipynb
@@ -1247,7 +1247,9 @@
         "to reveal his identity in open court knowledge of communications between his father and significant people know and I know you not want the boys role in the rest of his father to be revealed in Open Session because he's\n",
         "\n",
         "--- Apstraktivni sažetak ---\n",
-        "Mr Edwin's 14 year old son Amir is the informant in the case. The crown argue that this evidence should not be disclosed to the defense in the interests of National Security it will be presented for the benefits of the special Advocate. The identity of the informant has not been confirmed."
+        "Mr Edwin's 14 year old son Amir is the informant in the case. The crown argue that this evidence should not be disclosed to the defense in the interests of National Security it will be presented for the benefits of the special Advocate. The identity of the informant has not been confirmed.\n",
+        "\n",
+        "Apstraktivni sažetak je puno bolji i smileniji jer gleda kontekst naspram samo pojave riječi."
       ],
       "metadata": {
         "id": "jQb57X2gCKWy"
